--- a/scss/main.css
+++ b/scss/main.css
@@ -1199,6 +1199,7 @@ body.cp1 {
         body.cp1 .photo-gallery-launchpad .gallery-link {
           width: 100vw;
           position: relative;
+          -webkit-clip-path: none !important;
           clip-path: none !important;
           top: 0 !important;
           height: 50%; } }
@@ -2457,6 +2458,7 @@ body.cp2 {
         body.cp2 .photo-gallery-launchpad .gallery-link {
           width: 100vw;
           position: relative;
+          -webkit-clip-path: none !important;
           clip-path: none !important;
           top: 0 !important;
           height: 50%; } }
@@ -3715,6 +3717,7 @@ body.cp3 {
         body.cp3 .photo-gallery-launchpad .gallery-link {
           width: 100vw;
           position: relative;
+          -webkit-clip-path: none !important;
           clip-path: none !important;
           top: 0 !important;
           height: 50%; } }
@@ -4973,6 +4976,7 @@ body.cp4 {
         body.cp4 .photo-gallery-launchpad .gallery-link {
           width: 100vw;
           position: relative;
+          -webkit-clip-path: none !important;
           clip-path: none !important;
           top: 0 !important;
           height: 50%; } }
@@ -6231,6 +6235,7 @@ body.cp5 {
         body.cp5 .photo-gallery-launchpad .gallery-link {
           width: 100vw;
           position: relative;
+          -webkit-clip-path: none !important;
           clip-path: none !important;
           top: 0 !important;
           height: 50%; } }
@@ -7489,6 +7494,7 @@ body.cp6 {
         body.cp6 .photo-gallery-launchpad .gallery-link {
           width: 100vw;
           position: relative;
+          -webkit-clip-path: none !important;
           clip-path: none !important;
           top: 0 !important;
           height: 50%; } }
